# bidule

./: .gitignore  README.md  pyproject.toml
bidule/: __init__.py  helpers.py  machine.py  main.py  version.py
